--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,50 @@
 body{
+   width: 1040px;
+
+}
+.wrapper{
+    width: 960px;
     margin: 0 auto;
-    width: 986px;
 }
 #border{
-    margin: 15%;
-    width: 50%;
+    width: 32%;
     float: left;
     border: 1px solid;
     background-color: #f5f5f5;
     border-radius: 5px;
+    margin: 50px;
+
+}
+.border1{
+    width: 32%;
+    float: left;
+    border: 1px solid;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    margin: 50px;
+
+
+}
+a{
 }
 .dom{
     width:98% ;
     float: left;
-    margin: 5px;
+    margin: 4px;
+    background-color: #0a6980;
+    color: #f5f5f5;
+}
+.dom2{
+    width:98% ;
+    float: left;
+    margin: 4px;
+    background-color: #0a6980;
+    color: #f5f5f5;
+}
+.dom3{
+    width:98% ;
+    float: left;
+    margin: 4px;
     background-color: #0a6980;
     color: #f5f5f5;
 }
