--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body{
-   width: 1040px;
+    width: 100%;
+    float: left;
+    margin: 0 auto;
 
 }
 .wrapper{
@@ -11,21 +13,15 @@ body{
     float: left;
     border: 1px solid;
     background-color: #f5f5f5;
-    border-radius: 5px;
     margin: 50px;
 
 }
-.border1{
+#border1{
     width: 32%;
     float: left;
     border: 1px solid;
     background-color: #f5f5f5;
-    border-radius: 5px;
     margin: 50px;
-
-
-}
-a{
 }
 .dom{
     width:98% ;
@@ -39,7 +35,7 @@ a{
     float: left;
     margin: 4px;
     background-color: #0a6980;
-    color: #f5f5f5;
+        color: #f5f5f5;
 }
 .dom3{
     width:98% ;
@@ -50,4 +46,38 @@ a{
 }
 li{
     list-style: none;
+    margin: 8px 0;
+    font-family: 'Droid Serif', serif;
+}
+form{
+    text-align: center;
+    border-top: 1px solid;
+}
+#bt{
+    display: none;
+}
+.i_n{
+    width: 99%;
+    float: left;
+    border: 1px solid rgb(24, 22, 14);
+    background-color: ghostwhite;
+    color: #000000;
+    font-size: 20px;
+}
+i{
+    color: #4da9a6;
+}
+.fa-comment{
+    color: #BDBDBD;
+}
+
+h1{
+    width: 100%;
+    margin: 20px 0;
+    float: left;
+    background-color: rgb(129, 200, 129);
+    text-align: center;
+    border: 1px solid #0e0a0e;
+    font-family: 'Lobster', cursive;.
+    
 }
